# zebrafish-toxicology-atlas-schema

./: .cruft.json  404.html  CONTRIBUTING.md  Makefile  README.md  about.yaml  config.public.mk  context.jsonld  documentation.Makefile  documentation.justfile  index.html  justfile  linkml.Makefile  linkml.justfile  menu.js  mkdocs.yml  pyproject.toml  schema_diagram.mmd  schema_diagram.puml  sitemap.xml  style.css  temp.db  validation.justfile  zebrafish_toxicology_atlas_schema.context.jsonld  zebrafish_toxicology_atlas_schema.graphql  zebrafish_toxicology_atlas_schema.json  zebrafish_toxicology_atlas_schema.jsonld  zebrafish_toxicology_atlas_schema.owl.ttl  zebrafish_toxicology_atlas_schema.shacl.ttl  zebrafish_toxicology_atlas_schema.shex  zebrafish_toxicology_atlas_schema.sql  zebrafish_toxicology_atlas_schema.yaml
Allele/: index.html
Annotation/: index.html
Boolean/: index.html
ChemicalEntity/: index.html
Concentration/: index.html
Control/: index.html
ControlImage/: index.html
Curie/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
DevelopmentalStage/: index.html
Double/: index.html
Entity/: index.html
Experiment/: index.html
ExposureEvent/: index.html
ExposureExperiment/: index.html
ExposureRegimenTypeEnum/: index.html
ExposureRouteEnum/: index.html
ExposureTypeEnum/: index.html
Fish/: index.html
FishExposureOutcome/: index.html
Float/: index.html
Gene/: index.html
Image/: index.html
Integer/: index.html
Jsonpath/: index.html
Jsonpointer/: index.html
(+155 files in other folders)
