[project]
name = "zebrafish-toxicology-atlas-schema"
version = "0.1.0"
description = "Core Model for Zebrafish Toxicology Atlas"
authors = [
    {name = "Sabrina Toro"},
    {name = "Sierra Moxon"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "linkml-runtime>=1.1.24",
    "SQLAlchemy>=1.4.32,!=1.4.46,<2.0",
    "linkml-transformer>=0.1",
    "linkml>=1.8.1",
    "yamllint>=1.35.1",
    "codespell>=2.4.1",
    "eralchemy2>=1.4.1",
]

[project.optional-dependencies]
dev = [
    "linkml-renderer>=0.1.2",
    "linkml>=1.3.5",
    "mkdocs-material>=8.2.8",
    "mkdocs-mermaid2-plugin>=1.1.1",
    "schemasheets>=0.1.14",
]
docs = [
    "linkml>=1.8.1",
    "mkdocs-material>=8.2.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/zebrafish_toxicology_atlas_schema"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
